# sgis-py

./: .gitignore  pyproject.toml
figures/: main.py
graphs/: isomorphism_search.dot  octagon_subdivided.dot  pattern.dot  pattern_0.dot  pattern_1.dot  pattern_2.dot  pattern_3.dot  target.dot  target_0.dot  target_1.dot  target_2.dot  target_3.dot  zds_pattern.dot  zds_target.dot
sgis/: heuristic-main.py  main.py  refinement.py  rolloutmatcher.py  treematcher.py  util.py  vf2.py  weighted-rollout.py
