[tool.poetry]
name = "sgis"
version = "0.1.0"
description = "Subgraph isomorphism solver testing"
authors = ["Devansh Patel <dvpatel5@asu.edu>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "sgis" }
]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.4.1"
pydot = "^3.0.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
